--- a/Checkbook/Project/src/Django_Checkbook/Checkbook/templates/checkbook/index.html
+++ b/Checkbook/Project/src/Django_Checkbook/Checkbook/templates/checkbook/index.html
@@ -8,7 +8,8 @@
         <h5>Manage your existing account!</h5>
         <form method="POST">
         <!-- Replace the <input> with a Django form including a dropdown list of accounts-->
-            <label id="index-label">Choose Account:</label><input type="text" name="Account"><br>
+            <label id="index-label">Choose Account:</label>
+            
             {% csrf_token %}
             {{ form.account }}
             <button type="submit">Go to Account</button>
